--- a/exercise-1/exercise.ipynb
+++ b/exercise-1/exercise.ipynb
@@ -21,10 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'suit': 'hearts', 'rank': 1}, {'suit': 'hearts', 'rank': 2}, {'suit': 'hearts', 'rank': 3}, {'suit': 'hearts', 'rank': 4}, {'suit': 'hearts', 'rank': 5}, {'suit': 'hearts', 'rank': 6}, {'suit': 'hearts', 'rank': 7}, {'suit': 'hearts', 'rank': 8}, {'suit': 'hearts', 'rank': 9}, {'suit': 'hearts', 'rank': 10}, {'suit': 'hearts', 'rank': 11}, {'suit': 'hearts', 'rank': 12}, {'suit': 'hearts', 'rank': 13}, {'suit': 'hearts', 'rank': 14}, {'suit': 'diamonds', 'rank': 1}, {'suit': 'diamonds', 'rank': 2}, {'suit': 'diamonds', 'rank': 3}, {'suit': 'diamonds', 'rank': 4}, {'suit': 'diamonds', 'rank': 5}, {'suit': 'diamonds', 'rank': 6}, {'suit': 'diamonds', 'rank': 7}, {'suit': 'diamonds', 'rank': 8}, {'suit': 'diamonds', 'rank': 9}, {'suit': 'diamonds', 'rank': 10}, {'suit': 'diamonds', 'rank': 11}, {'suit': 'diamonds', 'rank': 12}, {'suit': 'diamonds', 'rank': 13}, {'suit': 'diamonds', 'rank': 14}, {'suit': 'clubs', 'rank': 1}, {'suit': 'clubs', 'rank': 2}, {'suit': 'clubs', 'rank': 3}, {'suit': 'clubs', 'rank': 4}, {'suit': 'clubs', 'rank': 5}, {'suit': 'clubs', 'rank': 6}, {'suit': 'clubs', 'rank': 7}, {'suit': 'clubs', 'rank': 8}, {'suit': 'clubs', 'rank': 9}, {'suit': 'clubs', 'rank': 10}, {'suit': 'clubs', 'rank': 11}, {'suit': 'clubs', 'rank': 12}, {'suit': 'clubs', 'rank': 13}, {'suit': 'clubs', 'rank': 14}, {'suit': 'spades', 'rank': 1}, {'suit': 'spades', 'rank': 2}, {'suit': 'spades', 'rank': 3}, {'suit': 'spades', 'rank': 4}, {'suit': 'spades', 'rank': 5}, {'suit': 'spades', 'rank': 6}, {'suit': 'spades', 'rank': 7}, {'suit': 'spades', 'rank': 8}, {'suit': 'spades', 'rank': 9}, {'suit': 'spades', 'rank': 10}, {'suit': 'spades', 'rank': 11}, {'suit': 'spades', 'rank': 12}, {'suit': 'spades', 'rank': 13}, {'suit': 'spades', 'rank': 14}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cards = []\n",
+    "suits = ['hearts', 'diamonds', 'clubs', 'spades']\n",
+    "\n",
+    "for suit in suits:\n",
+    "    for rank in range(1, 15):\n",
+    "        cards.append({'suit':suit, 'rank':rank})\n",
+    "\n",
+    "print(cards)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,10 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'suit': 'diamonds', 'rank': 2}, {'suit': 'clubs', 'rank': 2}, {'suit': 'diamonds', 'rank': 3}, {'suit': 'diamonds', 'rank': 14}, {'suit': 'spades', 'rank': 10}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.shuffle(cards)\n",
+    "s = slice(5)\n",
+    "hand = cards[s]\n",
+    "print(hand)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,10 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def contains_queen_of_hearts(card_list):\n",
+    "    \"\"\"Checks whether queen of hearts is in list.\"\"\"\n",
+    "    for card in card_list:\n",
+    "        if card['suit'] == 'hearts' and card['rank'] == 12:\n",
+    "            return True\n",
+    "    return False\n",
+    "    \n",
+    "print(contains_queen_of_hearts(cards))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +115,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'suit': 'diamonds', 'rank': 14}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_high_card(card_list):\n",
+    "    \"\"\"Determines and returns highest card in list\"\"\"\n",
+    "    high_card = card_list[0]\n",
+    "    for card in card_list:\n",
+    "        if card['rank'] > high_card['rank']:\n",
+    "            high_card = card\n",
+    "    return high_card\n",
+    "\n",
+    "print(get_high_card(cards))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +147,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_flush(card_list):\n",
+    "    \"\"\"Checks whether list represents a flush.\"\"\"\n",
+    "    current = card_list[0]\n",
+    "    for card in card_list:\n",
+    "        if card['suit'] == current['suit']:\n",
+    "            message = True\n",
+    "            current = card\n",
+    "        else:\n",
+    "            message = False\n",
+    "    return message\n",
+    "\n",
+    "\n",
+    "flush = [{'suit':'hearts', 'rank': 1}, {'suit':'hearts', 'rank': 2}, {'suit':'hearts', 'rank': 7}, {'suit':'hearts', 'rank': 13}, {'suit':'hearts', 'rank': 5}]\n",
+    "print(is_flush(flush))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.1"
   },
   "toc": {
    "colors": {
